# sat-sync

./: ARCHITECTURE.md  MANIFESTO.md  README.md  ROADMAP.md  generate_issues_report.py  generate_poi_dashboard.py  generate_poi_quality_history.py  generate_poi_report.py  generate_todo_map.py  pyproject.toml  sat_poi_dashboard.html  sat_poi_issues_report.html  sat_poi_issues_report.json  sat_poi_quality_history.html  sat_poi_quality_history.json  sat_poi_quality_history_data.js  sat_poi_report.html  sat_poi_report_full.html  sat_roundtripping_utmaningar.html  sat_todo_map.html  whats_new.html
.github/workflows/: regen-dashboard.yml
sat_sync/: audit.py  cli.py  database.py  engine.py  findings.py  models.py  sat.py  status.py  sync.py
sat_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sat_sync/data/: sat.json
sat_sync/policies/: default.yaml
sat_sync/rules/: __init__.py  base.py  codes.py  messages_en.py  messages_sv.py  missing_in_osm.py  missing_wikidata.py  multiple_sources_different_ids.py  unknown_sat_identifier.py  wikidata_osm_mismatch.py
sat_sync/sources/: base.py  osm.py  poi_concordance.py  sat.py  taginfo.py  wikidata.py
tests/: test_engine.py  test_identity_source.py  test_messages.py  test_missing_in_osm.py  test_missing_wikidata.py  test_multiple_sources_different_ids_rule.py  test_osm_source.py  test_poi_concordance.py  test_sat_source.py  test_source.py  test_taginfo_source.py  test_unknown_sat_identifier_rule.py  test_wikidata_osm_mismatch_rule.py  test_wikidata_source.py
tests/data/: sat_missing_wikidata.json
(+1 files in other folders)
